src/app/modules/newsfeed/activity/paywall/paywall.component.scss
m-activity__paywall {
  display: block;
  width: 100%;
  height: 100%;

  &.isPaywall2020 {
    height: 100%;
    position: absolute;
    top: 0;
    left: 0;
    cursor: pointer;
    z-index: 2;
  }
}

