Stop paywall css from overflowing to huge height #3359

--- a/src/app/modules/newsfeed/activity/paywall/paywall.component.scss
+++ b/src/app/modules/newsfeed/activity/paywall/paywall.component.scss
@@ -1,7 +1,6 @@
 m-activity__paywall {
   display: block;
   width: 100%;
-  height: 100%;
 
   &.isPaywall2020 {
     height: 100%;
